<resources>

    <string name="auth_create_account">Or create an account now!</string>
    <string name="auth_hint_email">Email Address</string>
    <string name="auth_hint_password">Password</string>
    <string name="auth_sign_in">Sign In</string>
    <string name="welcome_logout">Log out</string>
    <string name="welcome_logout_title">Would you like to logout from current account?</string>
    <string name="welcome_logout_positive">Yes, Logout now</string>
    <string name="welcome_logout_negative">No</string>
    <string name="auth_hint_first_name">First Name</string>
    <string name="auth_hint_last_name">Last Name</string>
    <string name="auth_hint_phone">Phone Number</string>
    <string name="auth_gender_male">Male</string>
    <string name="auth_gender_female">Female</string>
    <string name="auth_welcome">Welcome to Pay Day Bank</string>
    <string name="auth_create_account_title">Create your account in a few steps</string>
    <string name="auth_create_account_submit">Create Account</string>
</resources>